# docrag

./: .gitignore  BUILD_COMPLETE.md  CRAWL4AI_INTEGRATION_COMPLETE.md  DEPLOYMENT.md  DOCRAG_CRAWL4AI_ENHANCED.md  DOCRAG_CRAWL4AI_INTEGRATION.md  DOCRAG_MVP_BUILD_GUIDE.md  INSTALL.md  INSTALLATION_SUMMARY.txt  MCP_SETUP.md  Makefile  README.md  UPDATE_GUIDE.md  brightsign-urls.txt  pyproject.toml  test_crawl4ai.py  update.sh
.github/: FUNDING.yml
docrag/: __init__.py  cli.py  config.py  embeddings.py  indexer.py  server.py  vectordb.py
docrag/scrapers/: __init__.py  archbee_scraper.py  base.py  crawl4ai_scraper.py  generic.py
