[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docrag"
version = "0.1.0"
description = "RAG-powered documentation access for AI coding assistants"
authors = [{name = "Ryan", email = "your-email@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "mcp>=0.9.0",
    "lancedb>=0.6.0",
    "sentence-transformers>=2.2.0",
    "langchain-text-splitters>=0.2.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "aiofiles>=23.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "markdownify>=0.11.0",
    "pyarrow>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
smart-scraping = [
    "crawl4ai>=0.2.0",
]

[project.scripts]
docrag = "docrag.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["docrag*"]
